--- a/shippable.triggers.yml
+++ b/shippable.triggers.yml
@@ -2,14 +2,14 @@ triggers:
  
   - name: trigger-dv-man
     type: trigger
-    source:
-      message: 'tesetinwglthtbth12 triifgfuggujythree in yml oekke13ewuh52122'
-      counter: 2  
+    pointer:
+     # message: 'tesetinwglthtbth12 triifgfuggujythree in yml oekke13ewuh52122'
+      counter: 1 
 
   - name: triggertest2
     type: trigger
-    source:
-      message: 'tesetinwglthtbth12 triifgfuggujythree in yml oekke13ewuh52322'
-      counter: 2
+    pointer:
+      #message: 'tesetinwglthtbth12 triifgfuggujythree in yml oekke13ewuh52322'
+      counter: 1
  
 
