--- a/shippable.triggers.yml
+++ b/shippable.triggers.yml
@@ -1,15 +1,5 @@
 triggers:
- 
-  - name: trigger-dv-man
-    type: trigger
-    pointer:
-     # message: 'tesetinwglthtbth12 triifgfuggujythree in yml oekke13ewuh52122'
-      counter: 3
-
-  - name: triggertest2
-    type: trigger
-    pointer:
-      #message: 'tesetinwglthtbth12 triifgfuggujythree in yml oekke13ewuh52322'
-      counter: 2
- 
-
+   - name: trigger-dv-man
+     type: trigger
+     version:
+       counter: 1
