--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -5,6 +5,6 @@ resources:
     pointer:
       sourceName: "revathird/imagenode"
     seed:
-      versionName: latest_version
+      versionName: latest_version_1
 
   
